Everything cleaned up – organization enhanced

--- a/2.bioemus configuration scripts/topology_plot.ipynb
+++ b/2.bioemus configuration scripts/topology_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,6 @@
     "    ax[0][0].scatter(xypos[0], xypos[1], label=\",\", color=colors,  marker=\".\", s=10)\n",
     "else:\n",
     "    ax[0][0].scatter(xypos[0], xypos[1], label=\",\", color=\"black\", marker=\".\", s=10)\n",
-    "#ax[0][0].set_title('SNN topology')\n",
     "\n",
     "# Neurons\n",
     "colors = [COLOR_INH if t==NRN_INH else COLOR_EXC for t in ntype]\n",
@@ -66,7 +65,6 @@
     "            else:                          \n",
     "                linecolor = \"black\"\n",
     "            ax[0][1].plot([xypos[0][src], xypos[0][dest]], [xypos[1][src], xypos[1][dest]], color=linecolor, linewidth=0.05)\n",
-    "#ax[0][1].set_title('SNN connections')\n",
     "\n",
     "ax[0][0].spines['top'].set_visible(False)\n",
     "ax[0][0].spines['right'].set_visible(False)\n",
@@ -78,7 +76,16 @@
     "ax[0][1].spines['right'].set_visible(False)\n",
     "ax[0][1].spines['bottom'].set_visible(False)\n",
     "ax[0][1].spines['left'].set_visible(False)\n",
-    "ax[0][1].tick_params(axis='both', which='both', labelsize=15, bottom = False, left = False, labelbottom=False, labelleft=False)\n"
+    "ax[0][1].tick_params(axis='both', which='both', labelsize=15, bottom = False, left = False, labelbottom=False, labelleft=False)\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "savedir = os.path.join('.','topology plot')       # <EDIT>\n",
+    "fname = 'topology'\n",
+    "os.makedirs(savedir, exist_ok=True)\n",
+    "plt.savefig(os.path.join(savedir, fname + \".\" + 'png'), format = 'png', bbox_inches = \"tight\", dpi=600, transparent=True) \n",
+    "plt.savefig(os.path.join(savedir, fname + \".\" + 'jpg'), format = 'jpg', bbox_inches = \"tight\", dpi=600)\n",
+    "plt.savefig(os.path.join(savedir, fname + \".\" + 'svg'), format = 'svg', bbox_inches = \"tight\")"
    ]
   }
  ],
